# docking_simulator

./: README.md  ubuntu_sim_ros_noetic.sh
base_description/: CMakeLists.txt  package.xml
base_description/meshes/: base_visual.dae
base_description/urdf/: base.gazebo  base.xacro
docking_description/: CMakeLists.txt  package.xml
docking_description/launch/: donut_rviz.launch
docking_description/meshes/: base_collision.dae  donut_visual.dae  propeller_ccw.dae  propeller_cw.dae
docking_description/params/: carrier  docker  donut
docking_description/urdf/: base.xacro  carrier.xacro  carrier_main.xacro  component_snippets.xacro  docker.xacro  docker_main.xacro  donut.xacro  donut_main.xacro  iris.xacro  iris_main.xacro  multirotor_base.xacro
docking_gazebo/: CMakeLists.txt  package.xml  setup.py
docking_gazebo/launch/: carrier.launch  docker.launch  in_flight_docking.launch  stationary_base_docking.launch
docking_gazebo/plots/: comparison_plot.py  control_scheme.py  distribution_plot.py  filter_plot.py  sim_filtered_06-Aug-10:05.csv  sim_raw_06-Aug-10:05.csv  sim_setpoint_06-Aug-10:05.csv
docking_gazebo/src/docking_gazebo/: carrier_control.py  common.py  donut_docking.py  in_flight_docking.py  stationary_docking.py  stationary_docking_test.py  velocity_control.py
stationary_base_docking/: CMakeLists.txt  package.xml  setup.py
stationary_base_docking/launch/: donut_rviz.launch  stationary_base_docking.launch
stationary_base_docking/meshes/: led.dae
stationary_base_docking/rviz/: urdf.rviz
stationary_base_docking/src/stationary_base_docking/: donut_docking.py
stationary_base_docking/urdf/: donut.xacro  multirotor_base.xacro
uav/: CMakeLists.txt  Docker.proto  package.xml
uav/controllers/: docker.py
uav/controllers/dock/: dock.py
uav/controllers/mavic2pro/: mavic2pro  mavic2pro.c
uav/launch/: mavic_demo.launch  webots_ros_python.launch
uav/models/: Docker.proto  docker.xacro  multirotor_base.xacro
uav/models/meshes/: Docker.proto  docker (copy).xacro  docker_collision.dae  docker_visual.dae
uav/protos/: Docker.proto  DockerTest.wbo  Dockerold.proto  Dockerupdate.wbo  Testy.proto
uav/worlds/: ros_python.wbt
